--- a/gb/20/11/3/n12523517.md
+++ b/gb/20/11/3/n12523517.md
@@ -1,14 +1,14 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hwupgb3287/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hwupgb3287/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/hwupgb3287/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hwupgb3287/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/hwupgb3287/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hwupgb3287/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/hwupgb3287/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hwupgb3287/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/hwupgb3287/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hwupgb3287/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/hwupgb3287/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hwupgb3287/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/hwupgb3287/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hwupgb3287/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/hwupgb3287/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hwupgb3287/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/hwupgb3287/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hwupgb3287/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/hwupgb3287/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hwupgb3287/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hwupgb3287/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hwupgb3287/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hwupgb3287/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hwupgb3287/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hwupgb3287/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hwupgb3287/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hwupgb3287/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hwupgb3287/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hwupgb3287/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hwupgb3287/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hwupgb3287/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hwupgb3287/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hwupgb3287/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hwupgb3287/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hwupgb3287/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hwupgb3287/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hwupgb3287/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hwupgb3287/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hwupgb3287/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hwupgb3287/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hwupgb3287/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hwupgb3287/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hwupgb3287/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hwupgb3287/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hwupgb3287/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hwupgb3287/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hwupgb3287/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/kobfyi3602/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/kobfyi3602/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/kobfyi3602/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>新州设立新平台 助围产期父母缓解心理压力</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2016/04/1210170501252382-600x400.jpg" />
 <h6>自疫情流行以来，81%的准父母和新父母感受到更多的焦虑。新州一个围产期父母服务机构设立了一个新的昼夜服务数字平台，以帮助缓解围产期准父母和新父母的忧郁和焦虑。（Fotolia）
 </h6>
 <hr>
-<p>【大纪元2020年11月04日讯】（大纪元记者肖捷澳洲悉尼报导）新州一个<ahref="https://github.com/hwupgb3287/djy/blob/master/gb/tag/%E5%9B%B4%E4%BA%A7%E6%9C%9F.md#1">围产期</a>父母服务机构设立了一个新的昼夜服务数字平台，以帮助缓解围产期<ahref="https://github.com/hwupgb3287/djy/blob/master/gb/tag/%E5%87%86%E7%88%B6%E6%AF%8D.md#1">准父母</a>和新父母的忧郁和焦虑。这是一个由新州政府资助的试点项目。</p>
-<p>自疫情流行以来，81%的<ahref="https://github.com/hwupgb3287/djy/blob/master/gb/tag/%E5%87%86%E7%88%B6%E6%AF%8D.md#1">准父母</a>和新父母感受到更多的焦虑。</p>
-<p>澳洲吉杰特基金会（GFA）与桑德（Sonder）公司在<ahref="https://github.com/hwupgb3287/djy/blob/master/gb/tag/%E5%9B%B4%E4%BA%A7%E6%9C%9F.md#1">围产期</a>心理健康周（11月8日至14日）到来之前，启动了吉杰特围产期支持中心（GPSC）数字化在线平台，以便在弱势家庭最需要帮助的时候为他们提供关键服务。</p>
+<p>【大纪元2020年11月04日讯】（大纪元记者肖捷澳洲悉尼报导）新州一个<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E5%9B%B4%E4%BA%A7%E6%9C%9F.md#1">围产期</a>父母服务机构设立了一个新的昼夜服务数字平台，以帮助缓解围产期<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E5%87%86%E7%88%B6%E6%AF%8D.md#1">准父母</a>和新父母的忧郁和焦虑。这是一个由新州政府资助的试点项目。</p>
+<p>自疫情流行以来，81%的<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E5%87%86%E7%88%B6%E6%AF%8D.md#1">准父母</a>和新父母感受到更多的焦虑。</p>
+<p>澳洲吉杰特基金会（GFA）与桑德（Sonder）公司在<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E5%9B%B4%E4%BA%A7%E6%9C%9F.md#1">围产期</a>心理健康周（11月8日至14日）到来之前，启动了吉杰特围产期支持中心（GPSC）数字化在线平台，以便在弱势家庭最需要帮助的时候为他们提供关键服务。</p>
 <p>周三（11月4日），新州副州长巴里拉罗（John Barilaro）、新州心理健康、次发达地区青年与妇女厅长泰勒（Bronnie Taylor）出席了吉杰特围产期支持中心的启动仪式。</p>
 <p>自杀是导致孕妇和产妇死亡的主要原因。研究显示81%的准父母和新父母因疫情流行感到焦虑。为此，吉杰特基金会与桑德公司合作推出了这一数字平台。</p>
 <p>这个由新州政府资助的试点项目将为新生儿父母提供每天24小时的心理支持，以缓解任何心理状况的恶化。</p>
@@ -27,48 +27,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/hwupgb3287/djy/blob/master/gb/16/10/12/n8390037.md#1">澳洲围产期死胎率上升13%</a></li>
-<li><a href="https://github.com/hwupgb3287/djy/blob/master/gb/17/10/21/n9756592.md#1">帮助新晋妈妈减轻精神压力</a></li>
-<li><a href="https://github.com/hwupgb3287/djy/blob/master/gb/19/2/12/n11039498.md#1">联邦政府将拨款维护新父母围产期精神健康</a></li>
-<li><a href="https://github.com/hwupgb3287/djy/blob/master/gb/19/12/13/n11720057.md#1">新州大龄产妇越来越多 剖腹产占三成以上</a></li>
-<li><a href="https://github.com/hwupgb3287/djy/blob/master/gb/20/1/21/n11809328.md#1">研究：孕期饮食脂肪较高影响孩子未来健康</a></li>
-<li><a href="https://github.com/hwupgb3287/djy/blob/master/gb/20/2/5/n11845762.md#1">孕妇撤回澳洲即将临产 被送珀斯家中隔离</a></li>
-<li><a href="https://github.com/hwupgb3287/djy/blob/master/gb/20/3/12/n11933681.md#1">南澳中共肺炎增至九例 妇幼医院增设门诊</a></li>
-<li><a href="https://github.com/hwupgb3287/djy/blob/master/gb/20/7/28/n12288263.md#1">维州限制产妇伴侣陪护时间 引争议</a></li>
-<li><a href="https://github.com/hwupgb3287/djy/blob/master/gb/20/11/3/n12523501.md#1">贸易紧张关系继续 中国停止进口澳洲葡萄酒</a></li>
-<li><a href="https://github.com/hwupgb3287/djy/blob/master/gb/20/11/3/n12521183.md#1">中共称测出有害生物 澳大麦出口商：无中生有</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/10/12/n8390037.md#1">澳洲围产期死胎率上升13%</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/17/10/21/n9756592.md#1">帮助新晋妈妈减轻精神压力</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/19/2/12/n11039498.md#1">联邦政府将拨款维护新父母围产期精神健康</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/19/12/13/n11720057.md#1">新州大龄产妇越来越多 剖腹产占三成以上</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/1/21/n11809328.md#1">研究：孕期饮食脂肪较高影响孩子未来健康</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/2/5/n11845762.md#1">孕妇撤回澳洲即将临产 被送珀斯家中隔离</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/12/n11933681.md#1">南澳中共肺炎增至九例 妇幼医院增设门诊</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/7/28/n12288263.md#1">维州限制产妇伴侣陪护时间 引争议</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/6/n13753249.md#1">昆州医生自杀率超普通人一倍</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/6/n13753200.md#1">新州警方一周内在悉尼西南区展开50多次突袭</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/20/n10234497.md#1" target="_blank">林辉：财大气粗的共产国际背后是血腥掠夺</a></li><li><a href="https://github.com/hwupgb3287/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank">追寻真理 这书讲什么</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/11/22/n10869318.md#1" target="_blank">这些前中共军官对李洪志大师的感恩</a></li>
+<li><a href="https://github.com/ychojm359/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank">这些官员为何起诉江泽民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/18/n10066862.md#1" target="_blank">智效民：著名物理学家饶毓泰的悲剧</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/9/14/n10713843.md#1" target="_blank">德国绿嫩市政府官方网页推荐法轮功</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/kjsqmc3310/djy/blob/master/gb/20/9/30/n12442859.md#1">《圣经》与《推背图》预言的应验与变换5</a></li>
-<li><a href="https://github.com/kjsqmc3310/djy/blob/master/gb/20/10/26/n12503625.md#1">麦克阿瑟的战后岁月及临终前的预言</a></li>
-<li><a href="https://github.com/kjsqmc3310/djy/blob/master/gb/20/9/3/n12378228.md#1">明朝神奇歌谣 寥寥数语 隐含天下变局</a></li>
-<li><a href="https://github.com/kjsqmc3310/djy/blob/master/gb/20/10/30/n12512315.md#1">像罗宇这样的红二代</a></li>
-<li><a href="https://github.com/kjsqmc3310/djy/blob/master/gb/20/10/11/n12468150.md#1">再生少年胜五郎 说出冥界转生过程钜细靡遗</a></li>
-<li><a href="https://github.com/kjsqmc3310/djy/blob/master/gb/20/11/3/n12522655.md#1">【横河观点】一场对决的大选 美国能否回归传统</a></li>
-<li><a href="https://github.com/kjsqmc3310/djy/blob/master/gb/20/11/3/n12521135.md#1">【一线采访视频版】上海大量实体店现倒闭潮</a></li>
-<li><a href="https://github.com/kjsqmc3310/djy/blob/master/gb/20/11/2/n12518877.md#1">【拍案惊奇】翻红加州？决战宾州 左媒撑川普</a></li>
-<li><a href="https://github.com/kjsqmc3310/djy/blob/master/gb/20/10/30/n12512538.md#1">不想买iPhone 12？两新款手机或是替代选择</a></li>
-<li><a href="https://github.com/kjsqmc3310/djy/blob/master/gb/20/11/1/n12517366.md#1">【一线采访】内循环不足 深圳工厂倒闭潮</a></li>
-<li><a href="https://github.com/kjsqmc3310/djy/blob/master/gb/20/11/1/n12516977.md#1">【翻墙必看】李克强又与中共喉舌不同调？</a></li>
-<li><a href="https://github.com/kjsqmc3310/djy/blob/master/gb/20/11/2/n12519251.md#1">签名遇妇人暖送1卷大钞 澎恰恰泪崩：我会加油</a></li>
-<li><a href="https://github.com/kjsqmc3310/djy/blob/master/gb/20/11/1/n12518151.md#1">杨幂踩高跟鞋下楼梯 伸手扶男星扑空超尴尬</a></li>
-<li><a href="https://github.com/kjsqmc3310/djy/blob/master/gb/20/11/1/n12518017.md#1">生日蛋糕被嫌老派 38岁林依晨高EQ回应</a></li>
-<li><a href="https://github.com/kjsqmc3310/djy/blob/master/gb/20/11/2/n12520465.md#1">登台献唱被拍成五五身 李荣浩：这还算个人吗</a></li>
-<li><a href="https://github.com/kjsqmc3310/djy/blob/master/gb/20/11/2/n12520365.md#1">昆凌分享儿女吃饭趣事 小周周获赞心智超成熟</a></li>
-<li><a href="https://github.com/kjsqmc3310/djy/blob/master/gb/20/11/1/n12517068.md#1">英国富豪拟用空气生产钻石 成本低又环保</a></li>
-<li><a href="https://github.com/kjsqmc3310/djy/blob/master/gb/20/10/29/n12511430.md#1">拉筋调节自律神经、改善酸痛！2招动作随时做</a></li>
-<li><a href="https://github.com/kjsqmc3310/djy/blob/master/gb/20/11/2/n12519131.md#1">印男兜售“阿拉丁神灯” 还伪装精灵冒出来</a></li>
-<li><a href="https://github.com/kjsqmc3310/djy/blob/master/gb/20/11/1/n12516971.md#1">印度阿萨姆茶价格创新高 每公斤上千美元</a></li>
-<li><a href="https://github.com/kjsqmc3310/djy/blob/master/gb/20/11/2/n12518854.md#1">美国孕妇出现阵痛 坚持投完票才去医院分娩</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/12/n13734778.md#1">【百年真相】替毛背锅“红色特工”潘汉年惨死</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/5/n13727490.md#1">【百年真相】密谋“金融政变” 肖建华将现身？</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/28/n13747559.md#1">一首名曲奏出大提琴前所未有的力量</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/29/n13748202.md#1">【未解之谜】通行灵界的科学家之二 天堂见闻</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/18/n13739799.md#1">【奇梦】姻缘天定 女子依梦得夫 男子依梦得妻</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752277.md#1">【马克时空】预警机、侦察机扮奇兵 助乌军精准打击俄军</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/26/n13746033.md#1">【探索时分】四大理由 中共应向俄罗斯开战？</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752508.md#1">【唐瑞讲故事】睡美人</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751953.md#1">刚送完满月礼盒 昆凌首晒产后全身照惊呆网友</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752436.md#1">李克强十万人大会事先获得习近平默许？</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752163.md#1">深圳前市长陈如桂落马 传有三大原因</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751953.md#1">刚送完满月礼盒 昆凌首晒产后全身照惊呆网友</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751923.md#1">港星杨英伟出售千万房产 已举家移民奥地利</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751832.md#1">评论：《壮志凌云2》证明好莱坞无需中国市场</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751310.md#1">张娜拉6月底结婚 赞新郎笑容美好且诚实善良</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/2/n13751276.md#1">好莱坞明星强尼戴普诽谤案胜诉 台主播发感言</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/26/n13746023.md#1">腰痛是肾脏在求救？肾是沉默器官 4症状要警惕</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/1/n13750249.md#1">长白发原因不一定是衰老！2种方法白发变黑发</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751690.md#1">危险长新冠4类人警惕 疫苗也挡不住？1招改善</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751309.md#1">研究发现人类肝脏永远年轻 只有不到三岁</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752195.md#1">5个早上常见的习惯 会降低睡眠品质</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hwupgb3287/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hwupgb3287/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/11/3/n12523517.htm">新州设立新平台 助围产期父母缓解心理压力</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/11/3/n12523517.htm">新州设立新平台 助围产期父母缓解心理压力</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hwupgb3287/djy/blob/master/gb/20/11/3/n12523517.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hwupgb3287/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hwupgb3287/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hwupgb3287/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hwupgb3287/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hwupgb3287/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hwupgb3287/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hwupgb3287/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hwupgb3287/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hwupgb3287/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hwupgb3287/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hwupgb3287/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hwupgb3287/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hwupgb3287/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hwupgb3287/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hwupgb3287/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hwupgb3287/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hwupgb3287/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hwupgb3287/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/hwupgb3287/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hwupgb3287/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hwupgb3287/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hwupgb3287/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hwupgb3287/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hwupgb3287/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/hwupgb3287/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hwupgb3287/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hwupgb3287/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hwupgb3287/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hwupgb3287/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hwupgb3287/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hwupgb3287/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hwupgb3287/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hwupgb3287/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hwupgb3287/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hwupgb3287/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hwupgb3287/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hwupgb3287/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hwupgb3287/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hwupgb3287/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hwupgb3287/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hwupgb3287/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hwupgb3287/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hwupgb3287/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hwupgb3287/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hwupgb3287/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hwupgb3287/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hwupgb3287/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hwupgb3287/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/kobfyi3602/djy/blob/master/gb/20/11/3/n12523517.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/kobfyi3602/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/kobfyi3602/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
